--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/community": "^0.0.19",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -32,11 +33,14 @@
     "next": "14.0.4",
     "next-cloudinary": "^5.18.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.25.0",
+    "openai-edge": "^1.2.2",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-spinners": "^0.13.8",
+    "replicate": "^0.25.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
